<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">poolclues</string>
    <string name="errorstar">*</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="signup_button">Continue</string>
    <string name="signup_header">Sign up</string>
    <string name="lbl_forgotpwd">Forgot Password?</string>
    <string name="lbl_forgotpassword">Forgot Password</string>
    <string name="lbl_termsandcondition">Terms &amp; Conditions &amp; Privacy Policy</string>
    <string name="lbl_address">Address</string>
    <string name="lbl_emailid">E-Mail Id</string>
    <string name="lbl_mobileno">Mobile No</string>
    <string name="lbl_lastname">Last Name</string>
    <string name="lbl_firstname">First Name</string>
    <string name="lbl_middlename">Middle Name</string>
    <string name="lbl_footerline">Shopclues presents poolclues</string>
    <string name="lbl_donthaveac">I do not have a username and password details. Click the button below to register</string>
    <string name="lbl_login">Secure Sign In</string>
    <string name="lbl_password">Poolclues Password</string>
    <string name="lbl_username">Poolclues User Id</string>
    <string name="lbl_poolclues">Poolclues</string>
    <string name="lbl_myselfie">My Selfie</string>
    <string name="title_activity_main">main</string>
    <string name="lbl_notification">Notifications</string>
    <string name="lbl_selfie">Selfie</string>
    <string name="lbl_Contribute">My Wallet</string>
    <string name="lbl_invitefriends">Invitee</string>
    <string name="lbl_createevent">Event List</string>
    <string name="lbl_GiftBucket">Gift Bucket</string>
    <string name="lbl_welcome">Welcome : </string>
    <string name="title_activity_choosegift">choosegift</string>
    <string name="lbl_choosegift">CHOOSE GIFT HERE</string>
    <string name="title_activity_single_grid">single_grid</string>
    <string name="title_activity_create_event">create_event</string>
    <string name="lbl_create_event">CREATE EVENT</string>
    <string name="lbl_titlereq">Title(required)  </string>
    <string name="lbl_location">Location </string>
    <string name="lbl_adddetails">Add Details </string>
    <string name="lbl_startdate">Start Date</string>
    <string name="lbl_enddate">End Date</string>
    <string name="lbl_starttime">Start Time</string>
    <string name="lbl_endtime">End Time</string>
    <string name="lbl_myname">Name</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_houseno">House No</string>
    <string name="lbl_street">Street</string>
    <string name="lbl_city">City</string>
    <string name="lbl_state">State</string>
    <string name="lbl_Country">Country</string>
    <string name="lbl_eventname">Event Name</string>
    <string name="lbl_targetdate">Target Date</string>
    <string name="lbl_targetamt">Target Amt</string>
    <string name="lbl_description">Event Description</string>
    <string name="lbl_invites">Invite To</string>
    <string name="lbl_message">type a Message to all</string>
    <string name="lbl_Create">Create</string>
    <string name="lbl_view">View</string>
    <string name="lbl_typeofevents">Type of Events</string>
    <string name="lbl_updatepassword">Update Pwd</string>
    <string name="lbl_Cancel">Cancel</string>
    <string name="lbl_mycontribution">My Contribution (₹)</string>
    <string name="lbl_invitation">Invitation</string>
    <string name="title_activity_myaccount">My Profile</string>
    <string name="lbl_verify">Save</string>
    <string name="lbl_sendinvitation">Send Invitation</string>
    <string name="lbl_eventcre">Enter a Event subject and add an optional event icon</string>
    <string name="lbl_eventparticipants">Event Participants</string>
    <string name="lbl_typename">type a Contributor email id</string>
    <string name="lbl_typecontamt">Contributors Amount</string>
    <string name="lbl_eventgroup">Event Group</string>
    <string name="lbl_createeventhere">Create Event</string>
    <string name="lbl_amt">Contri Amout</string>
    <string name="lbl_addparticipants">Add Participants</string>
    <string name="lbl_addphoto">Add \nPhoto</string>
    <string name="lbl_contacts">Contacts</string>
    <string name="lbl_addtocart">Shop Now</string>
    <string name="hint_Emailid">Enter E-Mail Id</string>
    <string name="hint_Password">Enter Password</string>
    <string name="title_activity_forgotpwd">forgotpwd</string>
    <string name="title_activity_mycreate_event">mycreate_event</string>
    <string name="title_activity_invitation">invitation</string>
    <string name="title_activity_mywallet">My Wallet</string>
    <string name="lbl_poolcluesbalance">Poolclues Balance</string>
    <string name="lbl_balance">₹:0</string>
    <string name="lbl_addmoney">Add Money</string>
    <string name="lbl_verificationcode">Verify Code</string>
    <string name="lbl_rechargenow">Recharge Now</string>
    <string name="lbl_rechargeamt">Recharge Amount(₹)</string>
    <string name="title_activity_notification">notification</string>
    <string name="title_activity_groupcreate">groupcreate</string>
    <string name="title_activity_grouplist">grouplist</string>
    <string name="type_prompt">Choose a type</string>
    <string-array name="type_arrays">
        <item>invited</item>
        <item>all</item>
        <item>created contributed</item>
    </string-array>
</resources>
