<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_alignParentTop="true"
        android:background="#08253c" >
        <TableRow
            android:layout_marginTop="5dp"
            android:gravity="left|center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/title_activity_mywallet"
                android:textColor="#f0c80c"
                android:textSize="30sp"
                android:layout_height="wrap_content" />
        </TableRow>
        <TableRow
            android:gravity="right"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:src="@drawable/contribute" />
        </TableRow>

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#FC0"
        android:gravity="center" >
        <TextView
            android:id="@+id/lbldatetime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/lbl_footerline"
            android:textColor="#000"
            android:textSize="20sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/content"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/footer"
        android:layout_below="@id/header"
        android:background="@drawable/background"
        android:gravity="center" >
        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            xmlns:android="http://schemas.android.com/apk/res/android">
            <LinearLayout
                android:id="@+id/liner1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:orientation="vertical" >
                <TableLayout
                    android:gravity="center"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >
                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/lbl_poolcluesbalance"
                    android:textColor="#ff3f3dff"
                    android:textSize="20sp" />
                </TableRow>
                <TableRow
                        android:gravity="center"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" >
                <TextView
                    android:id="@+id/lblttlamt"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/lbl_balance"
                    android:textColor="#ff1b9d06"
                    android:textSize="50sp" />
                    <Button
                        android:id="@+id/btnaddmoney"
                        android:layout_marginTop="10dp"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:textColor="#fffbfdff"
                        android:textStyle="bold"
                        android:textSize="25sp"
                        android:text="@string/lbl_addmoney" />
                </TableRow>
                <TableRow
                        android:gravity="center"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/txt_amount"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_width="180dp"
                    android:layout_height="45dp"
                    android:inputType="number"
                    android:textColor="#ff1c1c1c"
                    android:visibility="gone"
                    android:hint="@string/lbl_rechargeamt"
                    android:background="@drawable/tblborder" />
                    </TableRow>
                <TableRow
                        android:gravity="center"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" >
                <Button
                    android:id="@+id/btnrecharge"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textColor="#fffbfdff"
                    android:textStyle="bold"
                    android:width="100dp"
                    android:textSize="25sp"
                    android:visibility="gone"
                    android:background="#ff3e92ff"
                    android:text="@string/lbl_rechargenow" />

                </TableRow>
                </TableLayout>
            </LinearLayout>
        </ScrollView>
        <LinearLayout
            android:layout_below="@id/scrollView1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <ListView
                android:layout_marginTop="10dp"
                android:id="@+id/list_rechargehis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </ListView>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>